Fix horzontal overflow due to background images

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,9 @@
 * {
     box-sizing: border-box;
 }
-
+html {
+    overflow-x: hidden;
+}
 .container {
     max-width: 1200px;
     margin: 0 auto;
@@ -272,6 +274,7 @@
         top: -100px;
         right: -180px;
         z-index: -1;
+        overflow: hidden;
     }
     #motivation .card {
         padding: 2.25rem 0; /* 36px 0 */
